name:          orthanc
version:       0.1.0.0
homepage:      https://github.com/hackedu/orthanc
license:       GPL-3
license-file:  LICENSE
author:        Zach Latta
maintainer:    zach@hackedu.us
build-type:    Simple
cabal-version: >=1.10

executable orthanc
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:    base >=4.7 && <4.8,
                    github,
                    distributed-process,
                    distributed-process-simplelocalnet,
                    template-haskell,
                    binary,
                    binary-generic==0.2.1
